--- a/leslie-flip-flop-footswitch.yaml
+++ b/leslie-flip-flop-footswitch.yaml
@@ -8,10 +8,12 @@ script:
         condition:
           binary_sensor.is_off: footswitch
         then:          
-            - logger.log: "stop mode detected"  
+            - logger.log: "STOP MODE ON"  
+            - switch.turn_on: stop                
             - switch.turn_off: fastmotor            
             - switch.turn_off: slowmotor               
-     
+            - switch.turn_off: led         
+               
 
 binary_sensor:
   - platform: gpio
@@ -23,44 +25,78 @@ binary_sensor:
         input: true
         pullup: true
     filters:
-      - delayed_on: 10ms
-    on_press:    
-      then:
+      - delayed_on: 200ms
+    # on_press:    
+    #   then:
+    #    - switch.turn_on: led
 
     on_release:
        then:
         - script.execute: checkforstop
+#coming out of stop,ALWAYS go to SLOW mode              
+
         - if:
             condition:
-              switch.is_on: fastmotor        
+              - and: 
+                - switch.is_on: fastmotor              
+                - switch.is_off: stop
             then:
-              - switch.turn_off: fastmotor            
-              - switch.turn_on: slowmotor            
-            else:    
-              - switch.turn_on: fastmotor            
-              - switch.turn_off: slowmotor           
+              - logger.log: "SLOW MODE" 
+              - switch.turn_off: fastmotor 
+              - switch.turn_off: led      
+              - delay: 100ms      
+              - switch.turn_on: slowmotor                         
+            else:           
+              - logger.log: "FAST MODE" 
+              - switch.turn_off: slowmotor
+              - delay: 250ms
+              - switch.turn_on: fastmotor             
+              - switch.turn_on: led
 
+        - if:
+            condition:
+              - and: 
+                - switch.is_on: stop
+            then:
+              - logger.log: "SLOW MODE" 
+              - switch.turn_off: fastmotor 
+              - switch.turn_off: led            
+              - switch.turn_on: slowmotor                         
+              - switch.turn_off: stop
+
+
+#d1/gpio5 d2/gpio4 best for relays
 switch:
   - platform: gpio
     id: fastmotor
-    pin: GPIO14
-#    inverted: True
-
+    pin: GPIO4
+#    inverted: true
     interlock: [slowmotor]
-
+ 
   - platform: gpio
     id: slowmotor
-    pin: GPIO12
+    pin: GPIO5
+#    inverted: true
     interlock: [fastmotor]
+
+  - platform: gpio #onboard led
+    id: led
+    pin: GPIO2
+    inverted: True
+
+  - platform: gpio
+    id: stop
+    pin: GPIO12
 
 esphome:
   name: leslie-flip-flop-footswitch
   friendly_name: Leslie Flip Flop footswitch
   on_boot:
     then:  
+      - wifi.disable:
       - switch.turn_on: slowmotor
       - switch.turn_off: fastmotor
-
+      - switch.turn_off: led
 esp8266:
    board: esp01_1m
 # esp32:
@@ -80,14 +116,15 @@ ota:
   - platform: esphome
 
 wifi:
+  enable_on_boot: false
   reboot_timeout: 0s
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
+    ap_timeout: 0s
     ssid: "Leslie-Flip-Flop-Footswitch"
     password: !secret wifi_password
 
-captive_portal:
-    
+captive_portal:    
