--- a/leslie-flip-flop-footswitch.yaml
+++ b/leslie-flip-flop-footswitch.yaml
@@ -13,26 +13,26 @@ script:
             - switch.turn_off: fastmotor            
             - switch.turn_off: slowmotor               
             - switch.turn_off: led         
-               
+            - switch.turn_off: lamp               
 
 binary_sensor:
   - platform: gpio
     name: "Footswitch"  
     id: footswitch
     pin: 
-      number: GPIO13
+      number: GPIO13 #D7
       mode:
         input: true
         pullup: true
     filters:
-      - delayed_on: 200ms
-    # on_press:    
-    #   then:
-    #    - switch.turn_on: led
-
+      - debounce: 0.1 #Only send values if the last incoming value is at least specified time period old
+    on_press:    
+       then:
+        - switch.turn_off: led
     on_release:
        then:
         - script.execute: checkforstop
+        - switch.turn_on: led
 #coming out of stop,ALWAYS go to SLOW mode              
 
         - if:
@@ -43,15 +43,16 @@ binary_sensor:
             then:
               - logger.log: "SLOW MODE" 
               - switch.turn_off: fastmotor 
-              - switch.turn_off: led      
-              - delay: 100ms      
+              - switch.turn_off: lamp      
+              - logger.log: "LAMP OFF SLOW MODE"   
+              - delay: 50ms      
               - switch.turn_on: slowmotor                         
             else:           
               - logger.log: "FAST MODE" 
               - switch.turn_off: slowmotor
-              - delay: 250ms
+              - delay: 50ms
               - switch.turn_on: fastmotor             
-              - switch.turn_on: led
+              - switch.turn_on: lamp
 
         - if:
             condition:
@@ -60,7 +61,9 @@ binary_sensor:
             then:
               - logger.log: "SLOW MODE" 
               - switch.turn_off: fastmotor 
-              - switch.turn_off: led            
+              - switch.turn_off: led   
+              - switch.turn_off: lamp   
+              - logger.log: "LAMP OFF STOP MODE"         
               - switch.turn_on: slowmotor                         
               - switch.turn_off: stop
 
@@ -68,26 +71,58 @@ binary_sensor:
 #d1/gpio5 d2/gpio4 best for relays
 switch:
   - platform: gpio
+    name: "Fast Motor"
     id: fastmotor
-    pin: GPIO4
-#    inverted: true
+    pin: GPIO4 #d2
     interlock: [slowmotor]
  
   - platform: gpio
+    name: "Slow Motor"
     id: slowmotor
-    pin: GPIO5
-#    inverted: true
+    pin: GPIO5 #d1
     interlock: [fastmotor]
 
   - platform: gpio #onboard led
     id: led
     pin: GPIO2
-    inverted: True
-    
-#dummy sw to detect stop function
-  - platform: gpio
+    inverted: true
+
+  - platform: template
     id: stop
-    pin: GPIO12
+    optimistic: true
+    internal: True
+    #pin: GPIO12 #DUMMY SW
+
+  - platform: gpio
+    id: lamp
+    name: "Lamp Fast"
+    pin: GPIO14 #D5 OUT TO INDICATOR LAMP
+
+number:
+#test numbers
+  - platform: template
+    name: "debounce on time"
+    id: debounce_on_time
+    min_value: 10
+    max_value: 500
+    step: 5
+    initial_value: 75
+    optimistic: true
+    restore_value: true
+    unit_of_measurement: "ms"
+    mode: slider
+
+  - platform: template
+    name: "debounce off time"
+    id: debounce_off_time
+    min_value: 10
+    max_value: 500
+    step: 5
+    initial_value: 75
+    optimistic: true
+    restore_value: true
+    unit_of_measurement: "ms"
+    mode: slider
 
 esphome:
   name: leslie-flip-flop-footswitch
@@ -98,15 +133,30 @@ esphome:
       - switch.turn_on: slowmotor
       - switch.turn_off: fastmotor
       - switch.turn_off: led
+      # flash lamp 5 times so we know the ESP is working
+      - switch.turn_on: lamp
+      - delay: 0.5s           
+      - switch.turn_off: lamp  
+      - delay: 0.5s           
+      - switch.turn_on: lamp
+      - delay: 0.5s           
+      - switch.turn_off: lamp  
+      - delay: 0.5s           
+      - switch.turn_on: lamp
+      - delay: 0.5s           
+      - switch.turn_off: lamp  
+      - delay: 0.5s           
+      - switch.turn_on: lamp
+      - delay: 0.5s           
+      - switch.turn_off: lamp  
+      - delay: 0.5s  
+      - switch.turn_on: lamp
+      - delay: 0.5s           
+      - switch.turn_off: lamp  
+      - delay: 0.5s  
+
 esp8266:
    board: esp01_1m
-# esp32:
-#   variant: ESP32C3
-#   board: esp32-c3-devkitm-1
-#   framework:
-#     type: esp-idf
-
-# Enable logging
 logger:
 
 # Enable Home Assistant API
@@ -116,15 +166,18 @@ api:
 ota:
   - platform: esphome
 
+web_server:
+  local: True
+
 wifi:
-  enable_on_boot: false # set to true while degugging
+  #enable_on_boot: false
   reboot_timeout: 0s
-  ssid: !secret wifi_ssid
+  ssid:  !secret wifi_ssid
   password: !secret wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ap_timeout: 0s
+    ap_timeout: 10s
     ssid: "Leslie-Flip-Flop-Footswitch"
     password: !secret wifi_password
 
